<resources>
    <string name="app_name">Bakku</string>

    <!--navigation drawer 뷰 -->
    <string name="nd_name">이름</string>
    <string name="nd_mypage">마이페이지</string>
    <string name="nd_logout">로그아웃</string>

    <!--login 뷰-->
    <string name="login">GOOGLE  LOGIN</string>

    <!--home 뷰-->
    <string name="sea">해수욕장명</string>
    <string name="location">주소</string>
    <string name="date">날짜 : </string>
    <string name="kg">kg</string>

    <!--add 뷰-->
    <string name="rep">대표 사진을 올려주세요</string>
    <string name="before">청소 이전 사진을 올려주세요</string>
    <string name="after">청소 이후 사진을 올려주세요</string>
    <string name="select_clean_sea">청소한 해수욕장 선택</string>
    <string name="select_date">청소한 날짜를 선택해주세요</string>
    <string name="cleaner_name">청소한 사람명</string>
    <string name="clean_quantitiy">쓰레기 무게를 입력해주세요(Kg) </string>
    <string name="describe">설명 (최대 255자)</string>
    <string name="finish">완료</string>

    <!--bakku detail 뷰-->
    <string name="detail_ocean">청소한 바다 : </string>
    <string name="detail_team">청소한 단체 / 개인명 : </string>
    <string name="detail_date">날짜 : </string>
    <string name="detail_before">Before</string>
    <string name="detail_after">After</string>
    <string name="detail_quantitiy">청소한 양 (Kg) : </string>
    <string name="detail_describe">설명 : </string>

    <!--ocean detail 뷰 -->
    <string name="ocean_name">해수욕장명</string>
    <string name="ocean_location">해수욕장 주소</string>
    <string name="ocean_bakkus">이 바다를 가꾼 바꾸들</string>

    <!--행사 뷰-->
    <string name="event_name">행사명</string>
    <string name="event_date">행사 기간</string>
    <string name="event_describe">행사 설명</string>

    <!--마이페이지 뷰 -->
    <string name="mypage_name">이름 : </string>
    <string name="mypage_email">이메일 : </string>
    <string name="mypage_logout">logout</string>
    <string name="mypage_date">날짜 : </string>
    <string name="mypage_kg">kg</string>

    <!-- 랭크뷰 -->
    <string name="tab1_title">전체별</string>
    <string name="tab2_title">해수욕장별</string>
    <string name="spinner1_prompt">Select an option</string>
    <string name="spinner2_prompt">Select an option</string>

    <!-- 아이디 -->
    <string name="web_client_id">121202610450-jnbpdvvaave39333dmdadqol5b08gdi9.apps.googleusercontent.com</string>

</resources>