<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_detail_rep"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/rectangle_round_10"
                    android:backgroundTint="@color/gray"
                    android:layout_margin="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ibtn_detail_accuse"
                    android:src="@drawable/ic_accuse"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_rep"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_margin="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_ocean"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ibtn_detail_accuse"
                    android:theme="@style/B15"
                    android:text="@string/detail_ocean"
                    android:layout_margin="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_team"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_ocean"
                    android:theme="@style/B15"
                    android:text="@string/detail_team"
                    android:layout_margin="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_team"
                    android:theme="@style/B15"
                    android:text="@string/detail_date"
                    android:layout_margin="15dp"
                    android:paddingBottom="30dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_before"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_date"
                    android:theme="@style/B15"
                    android:layout_margin="15dp"
                    android:text="@string/detail_before"/>

                <ImageView
                    android:id="@+id/iv_detail_before"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/rectangle_round_10"
                    android:backgroundTint="@color/gray"
                    android:layout_margin="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_before"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_after"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_before"
                    android:theme="@style/B15"
                    android:layout_margin="15dp"
                    android:text="@string/detail_after"/>

                <ImageView
                    android:id="@+id/iv_detail_after"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/rectangle_round_10"
                    android:backgroundTint="@color/gray"
                    android:layout_margin="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_after"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_quantity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail_after"
                    android:theme="@style/B15"
                    android:layout_margin="15dp"
                    android:text="@string/detail_quantitiy"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_describe"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_quantity"
                    android:theme="@style/B15"
                    android:layout_margin="15dp"
                    android:text="@string/detail_describe"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>