<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mypageFragment"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/iv_mypage"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_mypage_name"
        android:text="@string/mypage_name"
        android:theme="@style/SB14"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_mypage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_mypage_email"
        android:text="@string/mypage_email"
        android:theme="@style/SB14"
        android:layout_marginLeft="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mypage_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mypage_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/mypage_logout"
        android:theme="@style/SB14"
        app:layout_constraintLeft_toRightOf="@+id/tv_mypage_email"
        app:layout_constraintTop_toBottomOf="@id/iv_mypage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mypage_logout"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_marginBottom="100dp">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/my_recycler_view"
                android:background="@color/gray"
                />

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>