<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addFragment"
    tools:context="com.example.bakku.fragments.AddFragment">

    <TextView
        android:id="@+id/tv_add_rep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/rep"
        android:theme="@style/B15"/>

    <ImageView
        android:id="@+id/iv_add_rep"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_round_10"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_rep"/>

    <TextView
        android:id="@+id/tv_add_before"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_rep"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/before"
        android:theme="@style/B15"/>

    <ImageView
        android:id="@+id/iv_add_before"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@drawable/rectangle_round_10"
        android:backgroundTint="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_before"/>

    <TextView
        android:id="@+id/tv_add_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="70dp"
        android:text="@string/after"
        android:theme="@style/B15"
        app:layout_constraintLeft_toRightOf="@+id/tv_add_before"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_rep" />

    <ImageView
        android:id="@+id/iv_add_after"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_round_10"
        android:backgroundTint="@color/gray"
        app:layout_constraintLeft_toRightOf="@+id/iv_add_before"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_before" />

    <Spinner
        android:id="@+id/sp_add_sea"
        android:layout_width="300dp"
        android:layout_height="wrap_content"


</androidx.constraintlayout.widget.ConstraintLayout>